@@ -6,6 +6,10 @@
     directory.
     * libseahorse/seahorse-pgp-source.c: Fix problem where only keys that
     were already imported would be reported by the import operation.
+    * libseahorse/seahorse-progress.c: 
+    * src/seahorse-key-manager.c: 
+    * src/seahorse-keyserver-results.c: Display status text properly after
+    performing an operation with no or minimal visible results. 
     
 2005-05-18  Nate Nielsen  <nielsen@memberwebs.com>
 
